--- a/store.html
+++ b/store.html
@@ -206,499 +206,8 @@ html, body {
 
 <div class="page-scroll">
     <div class="page-inner">
-<!-- ================= WINTER DROP ================= -->
-<section id="winter-drop" class="store-section">
 
-    <!-- ===== BANNER PLACEHOLDER ===== -->
-    <div class="section-banner">
-        WINTER DROP — BANNER ART PLACEHOLDER
-    </div>
-
-    <!-- ===== PATCH BABY ===== -->
-    <div class="section-bg">PATCH BABY — BACKGROUND ART PLACEHOLDER</div>
-
-    <div class="product-grid">
-
-        <!-- PATCH BABY JOGGER — WOMEN -->
-        <div class="product-tile" data-modal="patchbaby-jogger-women">
-            <img src="ModelPictures/patchbabysjogger/sweatshirtfront.png">
-            <div class="card-meta">
-                <h4>PATCH BABY JOGGER — WOMEN</h4>
-                <div class="price-row">
-                    <div class="price">$245.00 SET</div>
-                </div>
-            </div>
-        </div>
-
-        <!-- PATCH BABY JOGGER — MEN -->
-        <div class="product-tile" data-modal="patchbaby-jogger-men">
-            <img src="ModelPictures/patchbabysjogger/sweatshirtfront.png">
-            <div class="card-meta">
-                <h4>PATCH BABY JOGGER — MEN</h4>
-                <div class="price-row">
-                    <div class="price">$235.00 SET</div>
-                </div>
-            </div>
-        </div>
-
-        <!-- PATCH BABY STREETWEAR — WOMEN -->
-        <div class="product-tile" data-modal="patchbaby-street-women">
-            <img src="ModelPictures/patchbabysstreetwear/Pbwomanscrophoodiefront.png">
-            <div class="card-meta">
-                <h4>PATCH BABY STREETWEAR — WOMEN</h4>
-                <div class="price-row">
-                    <div class="price">$255.00 SET</div>
-                </div>
-            </div>
-        </div>
-
-        <!-- PATCH BABY STREETWEAR — MEN -->
-        <div class="product-tile" data-modal="patchbaby-street-men">
-            <img src="ModelPictures/patchbabysstreetwear/Pbmenshoodiefront.png">
-            <div class="card-meta">
-                <h4>PATCH BABY STREETWEAR — MEN</h4>
-                <div class="price-row">
-                    <div class="price">$255.00 SET</div>
-                </div>
-            </div>
-        </div>
-
-    </div>
-
-    <!-- ===== PANTHERS & VAMPIRES BANNER ===== -->
-    <div class="section-banner" style="margin-top:120px;">
-        PANTHERS & VAMPIRES — BANNER ART PLACEHOLDER
-    </div>
-
-    <div class="section-bg">PANTHERS & VAMPIRES — BACKGROUND ART PLACEHOLDER</div>
-
-    <div class="product-grid">
-
-        <!-- P&V JOGGER — WOMEN -->
-        <div class="product-tile" data-modal="pv-jogger-women">
-            <img src="ModelPictures/Panthers&vampiresjogger/Panthers&vampiressweatshirtfront.png">
-            <div class="card-meta">
-                <h4>PANTHERS & VAMPIRES JOGGER — WOMEN</h4>
-                <div class="price-row">
-                    <div class="price">$245.00 SET</div>
-                </div>
-            </div>
-        </div>
-
-        <!-- P&V JOGGER — MEN -->
-        <div class="product-tile" data-modal="pv-jogger-men">
-            <img src="ModelPictures/Panthers&vampiresjogger/v&pmenssweatshirtfront.png">
-            <div class="card-meta">
-                <h4>PANTHERS & VAMPIRES JOGGER — MEN</h4>
-                <div class="price-row">
-                    <div class="price">$235.00 SET</div>
-                </div>
-            </div>
-        </div>
-
-        <!-- P&V STREETWEAR — WOMEN -->
-        <div class="product-tile" data-modal="pv-street-women">
-            <img src="ModelPictures/Panthers&vampiresstreewear/P&Vstreetwearcrophoodiefront.png">
-            <div class="card-meta">
-                <h4>PANTHERS & VAMPIRES STREETWEAR — WOMEN</h4>
-                <div class="price-row">
-                    <div class="price">$255.00 SET</div>
-                </div>
-            </div>
-        </div>
-
-        <!-- P&V STREETWEAR — MEN -->
-        <div class="product-tile" data-modal="pv-street-men">
-            <img src="ModelPictures/Panthers&vampiresstreewear/P&Vhoodiefront.png">
-            <div class="card-meta">
-                <h4>PANTHERS & VAMPIRES STREETWEAR — MEN</h4>
-                <div class="price-row">
-                    <div class="price">$255.00 SET</div>
-                </div>
-            </div>
-        </div>
-
-    </div>
-
-</section>
-
-     <!-- ================= WINTER DROP ================= -->
-<section id="winter-drop" class="store-section">
-
-    <!-- ===== WINTER DROP BANNER PLACEHOLDER ===== -->
-    <div class="section-banner">WINTER DROP — BANNER PLACEHOLDER</div>
-
-    <!-- ======================================================
-         PATCH BABY — JOGGER
-         ====================================================== -->
-    <div class="section-bg">PATCH BABY JOGGER — BACKGROUND ART PLACEHOLDER</div>
-
-    <div class="product-grid two-col">
-
-        <!-- WOMEN -->
-        <div class="product-column">
-            <h3 class="column-title">WOMEN</h3>
-
-            <div class="product-tile" data-modal="pb-jogger-women-pompom">
-                <img src="ModelPictures/patchbabysjogger/pompombeanie.png">
-                <div class="card-meta">
-                    <h4>POM POM BEANIE</h4>
-                    <div class="price">$55.00</div>
-                </div>
-            </div>
-
-            <div class="product-tile" data-modal="pb-jogger-women-sweatshirt">
-                <img src="ModelPictures/patchbabysjogger/sweatshirtfront.png">
-                <div class="card-meta">
-                    <h4>SWEATSHIRT</h4>
-                    <div class="price">$100.00</div>
-                </div>
-            </div>
-
-            <div class="product-tile" data-modal="pb-jogger-women-joggers">
-                <img src="ModelPictures/patchbabysjogger/joggerpantsfront.png">
-                <div class="card-meta">
-                    <h4>JOGGER PANTS</h4>
-                    <div class="price">$90.00</div>
-                </div>
-            </div>
-        </div>
-
-        <!-- MEN -->
-        <div class="product-column">
-            <h3 class="column-title">MEN</h3>
-
-            <div class="product-tile" data-modal="pb-jogger-men-beanie">
-                <img src="ModelPictures/patchbabysjogger/beanie.png">
-                <div class="card-meta">
-                    <h4>BEANIE</h4>
-                    <div class="price">$45.00</div>
-                </div>
-            </div>
-
-            <div class="product-tile" data-modal="pb-jogger-men-sweatshirt">
-                <img src="ModelPictures/patchbabysjogger/sweatshirtfront.png">
-                <div class="card-meta">
-                    <h4>SWEATSHIRT</h4>
-                    <div class="price">$100.00</div>
-                </div>
-            </div>
-
-            <div class="product-tile" data-modal="pb-jogger-men-joggers">
-                <img src="ModelPictures/patchbabysjogger/joggerpantsfront.png">
-                <div class="card-meta">
-                    <h4>JOGGER PANTS</h4>
-                    <div class="price">$90.00</div>
-                </div>
-            </div>
-        </div>
-
-    </div>
-
-    <!-- ======================================================
-         PATCH BABY — STREETWEAR
-         ====================================================== -->
-    <div class="section-bg">PATCH BABY STREETWEAR — BACKGROUND ART PLACEHOLDER</div>
-
-    <div class="product-grid two-col">
-
-        <!-- WOMEN -->
-        <div class="product-column">
-            <h3 class="column-title">WOMEN</h3>
-
-            <div class="product-tile" data-modal="pb-street-women-cap">
-                <img src="ModelPictures/patchbabysstreetwear/pbfittedcap1.png">
-                <div class="card-meta">
-                    <h4>FITTED CAP</h4>
-                    <div class="price">$65.00</div>
-                </div>
-            </div>
-
-            <div class="product-tile" data-modal="pb-street-women-crop">
-                <img src="ModelPictures/patchbabysstreetwear/Pbwomanscrophoodiefront.png">
-                <div class="card-meta">
-                    <h4>CROP HOODIE</h4>
-                    <div class="price">$110.00</div>
-                </div>
-            </div>
-
-            <div class="product-tile" data-modal="pb-street-women-yoga">
-                <img src="ModelPictures/patchbabysstreetwear/Pbwomansyogafront.png">
-                <div class="card-meta">
-                    <h4>YOGA PANTS</h4>
-                    <div class="price">$80.00</div>
-                </div>
-            </div>
-        </div>
-
-        <!-- MEN -->
-        <div class="product-column">
-            <h3 class="column-title">MEN</h3>
-
-            <div class="product-tile" data-modal="pb-street-men-snapback">
-                <img src="ModelPictures/patchbabysstreetwear/Pbsnapback1.png">
-                <div class="card-meta">
-                    <h4>SNAPBACK</h4>
-                    <div class="price">$65.00</div>
-                </div>
-            </div>
-
-            <div class="product-tile" data-modal="pb-street-men-hoodie">
-                <img src="ModelPictures/patchbabysstreetwear/Pbmenshoodiefront.png">
-                <div class="card-meta">
-                    <h4>HOODIE</h4>
-                    <div class="price">$110.00</div>
-                </div>
-            </div>
-
-            <div class="product-tile" data-modal="pb-street-men-shorts">
-                <img src="ModelPictures/patchbabysstreetwear/Pbmensshortsfront.png">
-                <div class="card-meta">
-                    <h4>SHORTS</h4>
-                    <div class="price">$80.00</div>
-                </div>
-            </div>
-        </div>
-
-    </div>
-
-    <!-- ======================================================
-         PANTHERS & VAMPIRES — BANNER PLACEHOLDER
-         ====================================================== -->
-    <div class="section-banner">PANTHERS & VAMPIRES — BANNER PLACEHOLDER</div>
-
-    <!-- ======================================================
-         PANTHERS & VAMPIRES — JOGGER
-         ====================================================== -->
-    <div class="section-bg">PANTHERS & VAMPIRES JOGGER — BACKGROUND ART PLACEHOLDER</div>
-
-    <div class="product-grid two-col">
-
-        <!-- WOMEN -->
-        <div class="product-column">
-            <h3 class="column-title">WOMEN</h3>
-
-            <div class="product-tile" data-modal="pv-jogger-women-beanie">
-                <img src="ModelPictures/Panthers&vampiresjogger/V&ppompombeanie.png">
-                <div class="card-meta">
-                    <h4>POM POM BEANIE</h4>
-                    <div class="price">$55.00</div>
-                </div>
-            </div>
-
-            <div class="product-tile" data-modal="pv-jogger-women-sweatshirt">
-                <img src="ModelPictures/Panthers&vampiresjogger/Panthers&vampiressweatshirtfront.png">
-                <div class="card-meta">
-                    <h4>SWEATSHIRT</h4>
-                    <div class="price">$100.00</div>
-                </div>
-            </div>
-
-            <div class="product-tile" data-modal="pv-jogger-women-joggers">
-                <img src="ModelPictures/Panthers&vampiresjogger/Panthers&vampiresgirlsjoggersfront.png">
-                <div class="card-meta">
-                    <h4>JOGGER PANTS</h4>
-                    <div class="price">$90.00</div>
-                </div>
-            </div>
-        </div>
-
-        <!-- MEN -->
-        <div class="product-column">
-            <h3 class="column-title">MEN</h3>
-
-            <div class="product-tile" data-modal="pv-jogger-men-beanie">
-                <img src="ModelPictures/Panthers&vampiresjogger/v&pbeanie.png">
-                <div class="card-meta">
-                    <h4>BEANIE</h4>
-                    <div class="price">$45.00</div>
-                </div>
-            </div>
-
-            <div class="product-tile" data-modal="pv-jogger-men-sweatshirt">
-                <img src="ModelPictures/Panthers&vampiresjogger/v&pmenssweatshirtfront.png">
-                <div class="card-meta">
-                    <h4>SWEATSHIRT</h4>
-                    <div class="price">$100.00</div>
-                </div>
-            </div>
-
-            <div class="product-tile" data-modal="pv-jogger-men-joggers">
-                <img src="ModelPictures/Panthers&vampiresjogger/v&pmensjoggerfront.png">
-                <div class="card-meta">
-                    <h4>JOGGER PANTS</h4>
-                    <div class="price">$90.00</div>
-                </div>
-            </div>
-        </div>
-
-    </div>
-
-</section>
-   <!-- PAGE<!-- ================= WINTER DROP SECTION ================= -->
-<section id="winter-drop" class="store-section">
-
-    <!-- ===== BANNER PLACEHOLDER ===== -->
-    <div class="section-banner">
-        WINTER DROP — BANNER ART PLACEHOLDER
-    </div>
-
-    <!-- ================= PATCH BABY ================= -->
-    <div class="drop-block">
-
-        <h2 class="drop-title">PATCH BABY</h2>
-
-        <div class="outfit-grid">
-
-            <!-- ===== PATCH BABY JOGGER ===== -->
-            <div class="outfit-column">
-
-                <h3 class="outfit-name">PATCH BABY JOGGER</h3>
-
-                <div class="gender-grid">
-
-                    <!-- WOMEN -->
-                    <div class="gender-box">
-                        <h4>WOMEN</h4>
-
-                        <div class="product-tile" data-modal="pbj-women">
-                            <img src="ModelPictures/patchbabysjogger/pompombeanie.png">
-                            <div class="meta">
-                                <span>POM POM BEANIE</span>
-                                <strong>$55.00</strong>
-                            </div>
-                        </div>
-
-                        <div class="product-tile" data-modal="pbj-women">
-                            <img src="ModelPictures/patchbabysjogger/sweatshirtfront.png">
-                            <div class="meta">
-                                <span>SWEATSHIRT</span>
-                                <strong>$100.00</strong>
-                            </div>
-                        </div>
-
-                        <div class="product-tile" data-modal="pbj-women">
-                            <img src="ModelPictures/patchbabysjogger/joggerpantsfront.png">
-                            <div class="meta">
-                                <span>JOGGER PANTS</span>
-                                <strong>$90.00</strong>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- MEN -->
-                    <div class="gender-box">
-                        <h4>MEN</h4>
-
-                        <div class="product-tile" data-modal="pbj-men">
-                            <img src="ModelPictures/patchbabysjogger/beanie.png">
-                            <div class="meta">
-                                <span>BEANIE</span>
-                                <strong>$45.00</strong>
-                            </div>
-                        </div>
-
-                        <div class="product-tile" data-modal="pbj-men">
-                            <img src="ModelPictures/patchbabysjogger/sweatshirtfront.png">
-                            <div class="meta">
-                                <span>SWEATSHIRT</span>
-                                <strong>$100.00</strong>
-                            </div>
-                        </div>
-
-                        <div class="product-tile" data-modal="pbj-men">
-                            <img src="ModelPictures/patchbabysjogger/joggerpantsfront.png">
-                            <div class="meta">
-                                <span>JOGGER PANTS</span>
-                                <strong>$90.00</strong>
-                            </div>
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-
-            <!-- ===== PATCH BABY STREETWEAR ===== -->
-            <div class="outfit-column">
-
-                <h3 class="outfit-name">PATCH BABY STREETWEAR</h3>
-
-                <div class="gender-grid">
-
-                    <!-- WOMEN -->
-                    <div class="gender-box">
-                        <h4>WOMEN</h4>
-
-                        <div class="product-tile" data-modal="pbs-women">
-                            <img src="ModelPictures/patchbabysstreetwear/pbfittedcap1.png">
-                            <div class="meta">
-                                <span>FITTED CAP</span>
-                                <strong>$65.00</strong>
-                            </div>
-                        </div>
-
-                        <div class="product-tile" data-modal="pbs-women">
-                            <img src="ModelPictures/patchbabysstreetwear/Pbwomanscrophoodiefront.png">
-                            <div class="meta">
-                                <span>CROP HOODIE</span>
-                                <strong>$110.00</strong>
-                            </div>
-                        </div>
-
-                        <div class="product-tile" data-modal="pbs-women">
-                            <img src="ModelPictures/patchbabysstreetwear/Pbwomansyogafront.png">
-                            <div class="meta">
-                                <span>YOGA PANTS</span>
-                                <strong>$80.00</strong>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- MEN -->
-                    <div class="gender-box">
-                        <h4>MEN</h4>
-
-                        <div class="product-tile" data-modal="pbs-men">
-                            <img src="ModelPictures/patchbabysstreetwear/Pbsnapback1.png">
-                            <div class="meta">
-                                <span>SNAPBACK</span>
-                                <strong>$65.00</strong>
-                            </div>
-                        </div>
-
-                        <div class="product-tile" data-modal="pbs-men">
-                            <img src="ModelPictures/patchbabysstreetwear/Pbmenshoodiefront.png">
-                            <div class="meta">
-                                <span>HOODIE</span>
-                                <strong>$110.00</strong>
-                            </div>
-                        </div>
-
-                        <div class="product-tile" data-modal="pbs-men">
-                            <img src="ModelPictures/patchbabysstreetwear/Pbmensshortsfront.png">
-                            <div class="meta">
-                                <span>SHORTS</span>
-                                <strong>$80.00</strong>
-                            </div>
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-
-        </div>
-    </div>
-
-    <!-- ===== SECOND BANNER PLACEHOLDER ===== -->
-    <div class="section-banner">
-        PANTHERS & VAMPIRES — BANNER ART PLACEHOLDER
-    </div>
-
-    <!-- ================= PANTHERS & VAMPIRES ================= -->
-    <!-- (STRUCTURE IDENTICAL — hooks into SAME MODAL SYSTEM) -->
-
-</section>
- CONTENT START -->
+        <!-- PAGE CONTENT START -->
         <!-- SECTIONS WILL BE INSERTED HERE -->
         <!-- PAGE CONTENT END -->
 
