--- a/store.html
+++ b/store.html
@@ -206,6 +206,169 @@ html, body {
 
 <div class="page-scroll">
     <div class="page-inner">
+<!-- ================= WINTER DROP SECTION ================= -->
+<section id="winter-drop" class="store-section">
+
+    <!-- ===== BANNER PLACEHOLDER ===== -->
+    <div class="section-banner">
+        WINTER DROP — BANNER ART PLACEHOLDER
+    </div>
+
+    <!-- ================= PATCH BABY ================= -->
+    <div class="drop-block">
+
+        <h2 class="drop-title">PATCH BABY</h2>
+
+        <div class="outfit-grid">
+
+            <!-- ===== PATCH BABY JOGGER ===== -->
+            <div class="outfit-column">
+
+                <h3 class="outfit-name">PATCH BABY JOGGER</h3>
+
+                <div class="gender-grid">
+
+                    <!-- WOMEN -->
+                    <div class="gender-box">
+                        <h4>WOMEN</h4>
+
+                        <div class="product-tile" data-modal="pbj-women">
+                            <img src="ModelPictures/patchbabysjogger/pompombeanie.png">
+                            <div class="meta">
+                                <span>POM POM BEANIE</span>
+                                <strong>$55.00</strong>
+                            </div>
+                        </div>
+
+                        <div class="product-tile" data-modal="pbj-women">
+                            <img src="ModelPictures/patchbabysjogger/sweatshirtfront.png">
+                            <div class="meta">
+                                <span>SWEATSHIRT</span>
+                                <strong>$100.00</strong>
+                            </div>
+                        </div>
+
+                        <div class="product-tile" data-modal="pbj-women">
+                            <img src="ModelPictures/patchbabysjogger/joggerpantsfront.png">
+                            <div class="meta">
+                                <span>JOGGER PANTS</span>
+                                <strong>$90.00</strong>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- MEN -->
+                    <div class="gender-box">
+                        <h4>MEN</h4>
+
+                        <div class="product-tile" data-modal="pbj-men">
+                            <img src="ModelPictures/patchbabysjogger/beanie.png">
+                            <div class="meta">
+                                <span>BEANIE</span>
+                                <strong>$45.00</strong>
+                            </div>
+                        </div>
+
+                        <div class="product-tile" data-modal="pbj-men">
+                            <img src="ModelPictures/patchbabysjogger/sweatshirtfront.png">
+                            <div class="meta">
+                                <span>SWEATSHIRT</span>
+                                <strong>$100.00</strong>
+                            </div>
+                        </div>
+
+                        <div class="product-tile" data-modal="pbj-men">
+                            <img src="ModelPictures/patchbabysjogger/joggerpantsfront.png">
+                            <div class="meta">
+                                <span>JOGGER PANTS</span>
+                                <strong>$90.00</strong>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
+            <!-- ===== PATCH BABY STREETWEAR ===== -->
+            <div class="outfit-column">
+
+                <h3 class="outfit-name">PATCH BABY STREETWEAR</h3>
+
+                <div class="gender-grid">
+
+                    <!-- WOMEN -->
+                    <div class="gender-box">
+                        <h4>WOMEN</h4>
+
+                        <div class="product-tile" data-modal="pbs-women">
+                            <img src="ModelPictures/patchbabysstreetwear/pbfittedcap1.png">
+                            <div class="meta">
+                                <span>FITTED CAP</span>
+                                <strong>$65.00</strong>
+                            </div>
+                        </div>
+
+                        <div class="product-tile" data-modal="pbs-women">
+                            <img src="ModelPictures/patchbabysstreetwear/Pbwomanscrophoodiefront.png">
+                            <div class="meta">
+                                <span>CROP HOODIE</span>
+                                <strong>$110.00</strong>
+                            </div>
+                        </div>
+
+                        <div class="product-tile" data-modal="pbs-women">
+                            <img src="ModelPictures/patchbabysstreetwear/Pbwomansyogafront.png">
+                            <div class="meta">
+                                <span>YOGA PANTS</span>
+                                <strong>$80.00</strong>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- MEN -->
+                    <div class="gender-box">
+                        <h4>MEN</h4>
+
+                        <div class="product-tile" data-modal="pbs-men">
+                            <img src="ModelPictures/patchbabysstreetwear/Pbsnapback1.png">
+                            <div class="meta">
+                                <span>SNAPBACK</span>
+                                <strong>$65.00</strong>
+                            </div>
+                        </div>
+
+                        <div class="product-tile" data-modal="pbs-men">
+                            <img src="ModelPictures/patchbabysstreetwear/Pbmenshoodiefront.png">
+                            <div class="meta">
+                                <span>HOODIE</span>
+                                <strong>$110.00</strong>
+                            </div>
+                        </div>
+
+                        <div class="product-tile" data-modal="pbs-men">
+                            <img src="ModelPictures/patchbabysstreetwear/Pbmensshortsfront.png">
+                            <div class="meta">
+                                <span>SHORTS</span>
+                                <strong>$80.00</strong>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+    <!-- ===== SECOND BANNER PLACEHOLDER ===== -->
+    <div class="section-banner">
+        PANTHERS & VAMPIRES — BANNER ART PLACEHOLDER
+    </div>
+
+    <!-- ================= PANTHERS & VAMPIRES ================= -->
+    <!-- (STRUCTURE IDENTICAL — hooks into SAME MODAL SYSTEM) -->
+
+</section>
 
         <!-- PAGE CONTENT START -->
         <!-- SECTIONS WILL BE INSERTED HERE -->
