--- a/store.html
+++ b/store.html
@@ -207,7 +207,63 @@ html, body {
     <div class="page-inner">
 
         <!-- PAGE CONTENT START -->
-        <!-- SECTIONS WILL BE INSERTED HERE -->
+        <!-- ================= WINTER DROP ================= -->
+<section class="store-section" id="winter-drop">
+
+  <!-- HERO / INTRO PLACEHOLDER -->
+  <div class="section-banner">
+    WINTER DROP — HERO IMAGE PLACEHOLDER
+    <small>Replace with campaign imagery</small>
+  </div>
+
+  <!-- WOMEN -->
+  <div class="grid-label">WOMEN</div>
+  <div class="product-grid">
+    <div class="product-card coming-soon">
+      <div class="placeholder-img">PRODUCT PLACEHOLDER</div>
+    </div>
+    <div class="product-card coming-soon">
+      <div class="placeholder-img">PRODUCT PLACEHOLDER</div>
+    </div>
+    <div class="product-card coming-soon">
+      <div class="placeholder-img">PRODUCT PLACEHOLDER</div>
+    </div>
+    <div class="product-card coming-soon">
+      <div class="placeholder-img">PRODUCT PLACEHOLDER</div>
+    </div>
+  </div>
+
+  <!-- EDITORIAL PLACEHOLDER -->
+  <div class="editorial">
+    <div class="editorial-img">WINTER DROP — EDITORIAL IMAGE PLACEHOLDER</div>
+    <div class="editorial-caption">EDITORIAL COPY PLACEHOLDER</div>
+  </div>
+
+  <!-- MEN -->
+  <div class="grid-label">MEN</div>
+  <div class="product-grid">
+    <div class="product-card coming-soon">
+      <div class="placeholder-img">PRODUCT PLACEHOLDER</div>
+    </div>
+    <div class="product-card coming-soon">
+      <div class="placeholder-img">PRODUCT PLACEHOLDER</div>
+    </div>
+    <div class="product-card coming-soon">
+      <div class="placeholder-img">PRODUCT PLACEHOLDER</div>
+    </div>
+    <div class="product-card coming-soon">
+      <div class="placeholder-img">PRODUCT PLACEHOLDER</div>
+    </div>
+  </div>
+
+</section>
+<!-- ================= END WINTER DROP ================= -->
+
+        <!-- PAGE CONTENT START -->
+
+         <!-- PAGE CONTENT START -->
+
+        
         <!-- PAGE CONTENT END -->
 
     </div>
