--- a/store.html
+++ b/store.html
@@ -205,6 +205,108 @@ html, body {
 
 <div class="page-scroll">
     <div class="page-inner">
+
+        <!-- PAGE CONTENT START -->
+/* ================= STORE MODULE ================= */
+
+.store-section {
+  margin-top: 120px;
+}
+
+.section-banner {
+  width: 100%;
+  height: 220px;
+  border: 1px solid rgba(212,175,55,0.35);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  letter-spacing: 0.28em;
+  text-transform: uppercase;
+  color: #f3d688;
+}
+
+.section-banner small {
+  display: block;
+  margin-top: 12px;
+  font-size: 0.65rem;
+  letter-spacing: 0.24em;
+  color: #e8e4d8;
+}
+
+.grid-label {
+  margin-top: 60px;
+  margin-bottom: 18px;
+  font-size: 0.75rem;
+  letter-spacing: 0.32em;
+  text-transform: uppercase;
+  color: #f3d688;
+}
+
+.product-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
+  gap: 22px;
+}
+
+.product-card {
+  border: 1px solid rgba(212,175,55,0.22);
+  background: rgba(0,0,0,0.65);
+  height: 260px;
+  position: relative;
+}
+
+.placeholder-img {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 0.6rem;
+  letter-spacing: 0.28em;
+  text-transform: uppercase;
+  color: #e8e4d8;
+  opacity: 0.7;
+}
+
+.editorial {
+  margin: 80px 0;
+  border: 1px solid rgba(212,175,55,0.22);
+}
+
+.editorial-img {
+  height: 320px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  letter-spacing: 0.28em;
+  text-transform: uppercase;
+  color: #f3d688;
+}
+
+.editorial-caption {
+  padding: 18px;
+  font-size: 0.65rem;
+  letter-spacing: 0.24em;
+  text-transform: uppercase;
+  color: #e8e4d8;
+}
+
+.coming-soon::after {
+  content: "COMING SOON";
+  position: absolute;
+  inset: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #ff3b3b;
+  letter-spacing: 0.36em;
+  font-size: 0.7rem;
+  background: rgba(0,0,0,0.45);
+}
+
+         <!-- PAGE CONTENT START -->
+<!-- ================= WINTER DROP ================= -->
 <section class="store-section" id="winter-drop">
 
   <!-- HERO / INTRO PLACEHOLDER -->
@@ -255,6 +357,10 @@ html, body {
 
 </section>
 <!-- ================= END WINTER DROP ================= -->
+
+        <!-- PAGE CONTENT START -->
+        
+        <!-- PAGE CONTENT END -->
 
     </div>
 </div>
