--- a/store.html
+++ b/store.html
@@ -355,6 +355,55 @@ html, body {
 </section>
 <!-- ================= END WINTER DROP ================= -->
 
+        <!-- ================= P&V DROP ================= -->
+<section id="pv-drop" class="store-section">
+
+  <div class="section-banner">
+    PANTHERS & VAMPIRES — DROP
+    <small>Campaign banner placeholder</small>
+  </div>
+
+  <div class="grid-label">WOMEN — P&V DROP</div>
+
+  <div class="product-grid">
+    <div class="product-card">
+      <div class="placeholder-img">PRODUCT PLACEHOLDER</div>
+    </div>
+    <div class="product-card">
+      <div class="placeholder-img">PRODUCT PLACEHOLDER</div>
+    </div>
+    <div class="product-card">
+      <div class="placeholder-img">PRODUCT PLACEHOLDER</div>
+    </div>
+    <div class="product-card">
+      <div class="placeholder-img">PRODUCT PLACEHOLDER</div>
+    </div>
+  </div>
+
+  <div class="editorial">
+    <div class="editorial-img">P&V EDITORIAL IMAGE PLACEHOLDER</div>
+    <div class="editorial-caption">PANTHERS & VAMPIRES CAMPAIGN SLOT</div>
+  </div>
+
+  <div class="grid-label">MEN — P&V DROP</div>
+
+  <div class="product-grid">
+    <div class="product-card">
+      <div class="placeholder-img">PRODUCT PLACEHOLDER</div>
+    </div>
+    <div class="product-card">
+      <div class="placeholder-img">PRODUCT PLACEHOLDER</div>
+    </div>
+    <div class="product-card">
+      <div class="placeholder-img">PRODUCT PLACEHOLDER</div>
+    </div>
+    <div class="product-card">
+      <div class="placeholder-img">PRODUCT PLACEHOLDER</div>
+    </div>
+  </div>
+
+</section>
+
 
         
     </div>
