--- a/store.html
+++ b/store.html
@@ -404,7 +404,34 @@ html, body {
 
 </section>
 
+<!-- ================= SAVED ITEMS ================= -->
+<section id="saved-items" class="store-section">
 
+  <div class="section-banner">
+    SAVED ITEMS
+    <small>Products you’ve saved will appear here</small>
+  </div>
+
+  <div class="product-grid">
+    <div class="product-card">
+      <div class="placeholder-img">SAVED PRODUCT</div>
+    </div>
+    <div class="product-card">
+      <div class="placeholder-img">SAVED PRODUCT</div>
+    </div>
+    <div class="product-card">
+      <div class="placeholder-img">SAVED PRODUCT</div>
+    </div>
+    <div class="product-card">
+      <div class="placeholder-img">SAVED PRODUCT</div>
+    </div>
+  </div>
+
+</section>
+
+
+
+        
         
     </div>
 </div>
