--- a/store.html
+++ b/store.html
@@ -432,12 +432,13 @@ html, body {
 <!-- ================= MEN — COMING SOON ================= -->
 <section id="men-coming-soon" class="store-section">
 
+  <!-- SECTION BANNER -->
   <div class="section-banner">
     MEN
     <small>Coming soon</small>
   </div>
 
-  <!-- SHIRTS -->
+  <!-- GRID GROUP 1 : SHIRTS -->
   <div class="grid-label">SHIRTS</div>
   <div class="product-grid">
     <div class="product-card coming-soon"><div class="placeholder-img">T-SHIRTS</div></div>
@@ -448,22 +449,29 @@ html, body {
     <div class="product-card coming-soon"><div class="placeholder-img">EMBROIDERED SHIRTS</div></div>
   </div>
 
-  <!-- JACKETS & VESTS -->
-  <div class="grid-label">JACKETS & VESTS</div>
+  <!-- EDITORIAL 1 -->
+  <div class="editorial">
+    <div class="editorial-img">MEN EDITORIAL IMAGE PLACEHOLDER</div>
+    <div class="editorial-caption">MEN — COMING SOON CAMPAIGN</div>
+  </div>
+
+  <!-- GRID GROUP 2 : OUTERWEAR / KNIT -->
+  <div class="grid-label">OUTERWEAR & KNITWEAR</div>
   <div class="product-grid">
     <div class="product-card coming-soon"><div class="placeholder-img">JACKETS</div></div>
     <div class="product-card coming-soon"><div class="placeholder-img">VESTS</div></div>
-  </div>
-
-  <!-- HOODIES / SWEATSHIRTS / KNITWEAR -->
-  <div class="grid-label">HOODIES & SWEATSHIRTS</div>
-  <div class="product-grid">
     <div class="product-card coming-soon"><div class="placeholder-img">HOODIES</div></div>
     <div class="product-card coming-soon"><div class="placeholder-img">SWEATSHIRTS</div></div>
     <div class="product-card coming-soon"><div class="placeholder-img">KNITWEAR</div></div>
   </div>
 
-  <!-- BOTTOMS -->
+  <!-- EDITORIAL 2 -->
+  <div class="editorial">
+    <div class="editorial-img">MEN LOOKBOOK PLACEHOLDER</div>
+    <div class="editorial-caption">FUTURE DROP PREVIEW</div>
+  </div>
+
+  <!-- GRID GROUP 3 : BOTTOMS -->
   <div class="grid-label">BOTTOMS</div>
   <div class="product-grid">
     <div class="product-card coming-soon"><div class="placeholder-img">SWEATPANTS & JOGGERS</div></div>
@@ -475,6 +483,7 @@ html, body {
   </div>
 
 </section>
+
 
 
         
