--- a/store.html
+++ b/store.html
@@ -428,61 +428,140 @@ html, body {
   </div>
 
 </section>
+<!-- ================= MEN ================= -->
+<section id="men" class="store-section">
 
-<!-- ================= MEN — COMING SOON ================= -->
-<section id="men-coming-soon" class="store-section">
-
-  <!-- SECTION BANNER -->
+  <!-- MEN BANNER -->
   <div class="section-banner">
     MEN
-    <small>Coming soon</small>
+    <small>Coming Soon</small>
   </div>
 
-  <!-- GRID GROUP 1 : SHIRTS -->
-  <div class="grid-label">SHIRTS</div>
-  <div class="product-grid">
-    <div class="product-card coming-soon"><div class="placeholder-img">T-SHIRTS</div></div>
-    <div class="product-card coming-soon"><div class="placeholder-img">POLO SHIRTS</div></div>
-    <div class="product-card coming-soon"><div class="placeholder-img">TANK TOPS</div></div>
-    <div class="product-card coming-soon"><div class="placeholder-img">3/4 SLEEVE SHIRTS</div></div>
-    <div class="product-card coming-soon"><div class="placeholder-img">LONG SLEEVE SHIRTS</div></div>
-    <div class="product-card coming-soon"><div class="placeholder-img">EMBROIDERED SHIRTS</div></div>
-  </div>
-
-  <!-- EDITORIAL 1 -->
+  <!-- MEN EDITORIAL IMAGE (TOP) -->
   <div class="editorial">
     <div class="editorial-img">MEN EDITORIAL IMAGE PLACEHOLDER</div>
-    <div class="editorial-caption">MEN — COMING SOON CAMPAIGN</div>
+    <div class="editorial-caption">MEN — CAMPAIGN VISUAL</div>
   </div>
 
-  <!-- GRID GROUP 2 : OUTERWEAR / KNIT -->
-  <div class="grid-label">OUTERWEAR & KNITWEAR</div>
+  <!-- MEN PRODUCT GRID -->
   <div class="product-grid">
-    <div class="product-card coming-soon"><div class="placeholder-img">JACKETS</div></div>
-    <div class="product-card coming-soon"><div class="placeholder-img">VESTS</div></div>
-    <div class="product-card coming-soon"><div class="placeholder-img">HOODIES</div></div>
-    <div class="product-card coming-soon"><div class="placeholder-img">SWEATSHIRTS</div></div>
-    <div class="product-card coming-soon"><div class="placeholder-img">KNITWEAR</div></div>
+
+    <!-- SHIRTS -->
+    <div class="product-card coming-soon">
+      <span class="coming-soon-badge">COMING SOON</span>
+      <div class="placeholder-img">IMAGE</div>
+      <div class="product-meta"><h4>T-SHIRTS</h4></div>
+    </div>
+
+    <div class="product-card coming-soon">
+      <span class="coming-soon-badge">COMING SOON</span>
+      <div class="placeholder-img">IMAGE</div>
+      <div class="product-meta"><h4>POLO SHIRTS</h4></div>
+    </div>
+
+    <div class="product-card coming-soon">
+      <span class="coming-soon-badge">COMING SOON</span>
+      <div class="placeholder-img">IMAGE</div>
+      <div class="product-meta"><h4>TANK TOPS</h4></div>
+    </div>
+
+    <div class="product-card coming-soon">
+      <span class="coming-soon-badge">COMING SOON</span>
+      <div class="placeholder-img">IMAGE</div>
+      <div class="product-meta"><h4>3/4 SLEEVE SHIRTS</h4></div>
+    </div>
+
+    <div class="product-card coming-soon">
+      <span class="coming-soon-badge">COMING SOON</span>
+      <div class="placeholder-img">IMAGE</div>
+      <div class="product-meta"><h4>LONG SLEEVE SHIRTS</h4></div>
+    </div>
+
+    <div class="product-card coming-soon">
+      <span class="coming-soon-badge">COMING SOON</span>
+      <div class="placeholder-img">IMAGE</div>
+      <div class="product-meta"><h4>EMBROIDERED SHIRTS</h4></div>
+    </div>
+
+    <!-- OUTERWEAR -->
+    <div class="product-card coming-soon">
+      <span class="coming-soon-badge">COMING SOON</span>
+      <div class="placeholder-img">IMAGE</div>
+      <div class="product-meta"><h4>JACKETS</h4></div>
+    </div>
+
+    <div class="product-card coming-soon">
+      <span class="coming-soon-badge">COMING SOON</span>
+      <div class="placeholder-img">IMAGE</div>
+      <div class="product-meta"><h4>VESTS</h4></div>
+    </div>
+
+    <!-- SWEATSHIRTS / HOODIES / KNITWEAR -->
+    <div class="product-card coming-soon">
+      <span class="coming-soon-badge">COMING SOON</span>
+      <div class="placeholder-img">IMAGE</div>
+      <div class="product-meta"><h4>SWEATSHIRTS</h4></div>
+    </div>
+
+    <div class="product-card coming-soon">
+      <span class="coming-soon-badge">COMING SOON</span>
+      <div class="placeholder-img">IMAGE</div>
+      <div class="product-meta"><h4>HOODIES</h4></div>
+    </div>
+
+    <div class="product-card coming-soon">
+      <span class="coming-soon-badge">COMING SOON</span>
+      <div class="placeholder-img">IMAGE</div>
+      <div class="product-meta"><h4>KNITWEAR</h4></div>
+    </div>
+
+    <!-- BOTTOMS -->
+    <div class="product-card coming-soon">
+      <span class="coming-soon-badge">COMING SOON</span>
+      <div class="placeholder-img">IMAGE</div>
+      <div class="product-meta"><h4>SWEATPANTS & JOGGERS</h4></div>
+    </div>
+
+    <div class="product-card coming-soon">
+      <span class="coming-soon-badge">COMING SOON</span>
+      <div class="placeholder-img">IMAGE</div>
+      <div class="product-meta"><h4>UNDERWEAR</h4></div>
+    </div>
+
+    <div class="product-card coming-soon">
+      <span class="coming-soon-badge">COMING SOON</span>
+      <div class="placeholder-img">IMAGE</div>
+      <div class="product-meta"><h4>LEGGINGS</h4></div>
+    </div>
+
+    <div class="product-card coming-soon">
+      <span class="coming-soon-badge">COMING SOON</span>
+      <div class="placeholder-img">IMAGE</div>
+      <div class="product-meta"><h4>SHORTS</h4></div>
+    </div>
+
+    <div class="product-card coming-soon">
+      <span class="coming-soon-badge">COMING SOON</span>
+      <div class="placeholder-img">IMAGE</div>
+      <div class="product-meta"><h4>PANTS</h4></div>
+    </div>
+
+    <div class="product-card coming-soon">
+      <span class="coming-soon-badge">COMING SOON</span>
+      <div class="placeholder-img">IMAGE</div>
+      <div class="product-meta"><h4>SWIMWEAR</h4></div>
+    </div>
+
   </div>
 
-  <!-- EDITORIAL 2 -->
+  <!-- MEN EDITORIAL IMAGE (BOTTOM) -->
   <div class="editorial">
-    <div class="editorial-img">MEN LOOKBOOK PLACEHOLDER</div>
-    <div class="editorial-caption">FUTURE DROP PREVIEW</div>
-  </div>
-
-  <!-- GRID GROUP 3 : BOTTOMS -->
-  <div class="grid-label">BOTTOMS</div>
-  <div class="product-grid">
-    <div class="product-card coming-soon"><div class="placeholder-img">SWEATPANTS & JOGGERS</div></div>
-    <div class="product-card coming-soon"><div class="placeholder-img">UNDERWEAR</div></div>
-    <div class="product-card coming-soon"><div class="placeholder-img">LEGGINGS</div></div>
-    <div class="product-card coming-soon"><div class="placeholder-img">SHORTS</div></div>
-    <div class="product-card coming-soon"><div class="placeholder-img">PANTS</div></div>
-    <div class="product-card coming-soon"><div class="placeholder-img">SWIMWEAR</div></div>
+    <div class="editorial-img">MEN SECOND EDITORIAL PLACEHOLDER</div>
+    <div class="editorial-caption">MEN — FUTURE DROP</div>
   </div>
 
 </section>
+<!-- ================= END MEN ================= -->
 
 
 
